They now come in multiple flavors! (pretty)
This looks amazing if you ramp up the number of particles

--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
             // tweakable parameters
             const float floorGravity = 0.0001;
             const float particleGravity = 0.001;
+            const float flavorAttraction = -0.0001;
             const float bounceDampeningFactor = 0.99;
-            const float maxV = 0.02;
+            const float maxV = 0.005;
             const float pointerRadius = 0.15;
             const float pointerSlowFactor = 0.3;
             const float pointerPullFactor = 0.1;
@@ -37,7 +38,7 @@
             in vec4 oldV;
             in int currentIndex;
             in float random;
-            out vec4 state; // attributes that other particles know about: (x, y, energy, undef)
+            out vec4 state; // attributes that other particles know about: (x, y, energy, flavor)
             out vec4 newV; // internal attributes: (dx, dy, undef, undef)
             out lowp vec4 color;
 
@@ -57,7 +58,9 @@
                     state.x = rand(vec2(random + 2.2)) * 2.0 - 1.0;
                     state.y = rand(vec2(random + 3.0)) * 2.0 - 1.0;
                     state.z = rand(vec2(random + 4.0)) * 0.5 + 0.5;
+                    state.w = rand(vec2(random + 5.0));
                 }
+                int flavor = (state.w < 0.5) ? 1 : -1;
 
                 state.xy += oldV.xy;
                 state.z += state.y * energyGain;
@@ -74,6 +77,19 @@
                     vec4 dist = allPositions[currentIndex] - center_of_mass;
                     newV.x -= dist.x * particleGravity;
                     newV.y -= dist.y * particleGravity;
+                }
+
+                if (flavorAttraction != 0.0) {
+                    vec4 otherState;
+                    int otherFlavor;
+                    vec2 dist;
+                    for (int i = 0; i < particleLimit; i++) {
+                        if (i == currentIndex) { continue; }
+                        otherState = allPositions[i];
+                        otherFlavor = (otherState.w < 0.5) ? 1 : -1;
+                        dist = otherState.xy - state.xy;
+                        newV.xy += dist.xy * flavorAttraction / length(dist.xy) * float(flavor * otherFlavor);
+                    }
                 }
 
                 /* Limit Position */
@@ -103,9 +119,12 @@
                 if (state.z < 0.0) { state.z = 0.0; }
                 if (state.z > 1.0) { state.z = 1.0; }
 
-                color.b = min(1.0, max(0.0, abs(newV.x) * 100.0));
-                color.r = min(1.0, max(0.0, abs(newV.y) * 100.0));
-                color.g = 1.0 - (color.r + color.b) / 2.0;
+                //color.b = min(1.0, max(0.0, abs(newV.x) * 100.0));
+                //color.r = min(1.0, max(0.0, abs(newV.y) * 100.0));
+                //color.g = 1.0 - (color.r + color.b) / 2.0;
+                color.r = flavor == 1 ? 1.0 : 0.0;
+                color.g = flavor == 1 ? 0.3 : 0.7;
+                color.b = flavor == 1 ? 0.0 : 1.0;
                 color.a = 1.0;
 
                 if (pointer.z > 0.0) {
