--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
 
             // tweakable parameters
             const float floorGravity = 0.0;
-            const float particleGravity = 0.001;
+            const float particleGravity = 0.003;
             const float flavorAttraction = -0.0001;
             const float bounceDampeningFactor = 0.99;
-            const float maxV = 0.005;
-            const float pointerRadius = 0.15;
+            const float maxV = 0.008;
+            const float pointerRadius = 0.30;
             const float pointerSlowFactor = 0.3;
-            const float pointerPullFactor = 0.1;
+            const float pointerPullFactor = 0.2;
             const float energyGain = 0.001; /* it's warmer at the top, and the particles will grow */
 
             // data transfer variables
@@ -88,7 +88,7 @@
                         otherState = allPositions[i];
                         otherFlavor = (otherState.w < 0.5) ? 1 : -1;
                         dist = otherState.xy - state.xy;
-                        newV.xy += dist.xy * flavorAttraction / pow(length(dist.xy), 2.0) * float(flavor * otherFlavor);
+                        newV.xy += dist.xy * flavorAttraction / pow(length(dist.xy), 3.0) * float(flavor * otherFlavor);
                     }
                 }
 
@@ -125,7 +125,7 @@
                 color.r = flavor == 1 ? 1.0 : 0.0;
                 color.g = flavor == 1 ? 0.3 : 0.7;
                 color.b = flavor == 1 ? 0.0 : 1.0;
-                color.a = 1.0;
+                color.a = 1.0 - state.z * 0.5;
 
                 if (pointer.z > 0.0) {
                     float dist = distance(state.xy, pointer.xy);
@@ -147,7 +147,8 @@
 
                 gl_Position.xy = state.xy;
                 gl_Position.zw = vec2(0.0, 1.0);
-                gl_PointSize = state.z * 4.0 + 2.0;
+                //gl_PointSize = state.z * 4.0 + 2.0;
+                gl_PointSize = 2.0;
             }
         </script>
         <script type="x-shader/x-fragment" id="fragment-shader">
