--- a/index.html
+++ b/index.html
@@ -86,15 +86,15 @@
                         if (i == currentIndex) { continue; }
                         otherState = allPositions[i];
                         dist = otherState.xy - state.xy;
-                        if (length(dist.xy) < 0.2) {
+                        //if (length(dist.xy) < 0.2) {
                             newV.xy += dist.xy
                                 * flavorAttraction
-                                * length(dist.xy)
+                                * (0.3 - max(0.0, min(0.3, length(dist.xy))))
                                 * (abs(state.w - otherState.w) < 0.04 ? -1.0 : (numFlavors - 1.0));
                             if (length(dist.xy) < 0.01) {
                                 state.w = (9.0 * state.w + otherState.w) / 10.0;
                             }
-                        }
+                        //}
                     }
                 }
 
