--- a/index.html
+++ b/index.html
@@ -30,17 +30,17 @@
             const float pointerRadius = 0.30;
             const float pointerSlowFactor = 0.3;
             const float pointerPullFactor = 0.5;
-            const float energyGain = 0.000; /* it's warmer at the top, and the particles will grow */
+            const float energyGain = 0.000; // it's warmer at the top, and the particles will grow
 
             // data transfer variables
             uniform vec4 allPositions[particleLimit];
-            uniform vec4 userInput; /* (x, y, clicking?, paused?), the latter two can be 1.0 or 0.0 */
+            uniform vec4 userInput; // (x, y, clicking?, paused?), the latter two can be 1.0 or 0.0
             in vec4 oldState;
             in vec4 oldV;
             in int currentIndex;
             in float random;
             out vec4 state; // attributes that other particles know about: (x, y, energy, flavor)
-            out vec4 newV; // internal attributes: (dx, dy, undef, undef)
+            out vec4 newV; // internal attributes: (x-velocity, y-velocity, undefined, undefined)
             out lowp vec4 color;
 
             float rand(vec2 co){
@@ -66,12 +66,11 @@
                 //color.b = (flavor == 1 ? 0.0 : 1.0);
                 color.a = 1.0;
 
-                if (userInput.w == 1.0) {
-                    return;  /* The user paused the simulation */
-                }
+                // Has the user paused the simulation?
+                if (userInput.w == 1.0) { return; }
 
+                // Initialization, decay, and respawning of particles:
                 if (state.z < 0.001) {
-                    // Particle dies. Ashes to ashes.
                     newV.x = (rand(vec2(random)) * 2.0 - 1.0) * maxV;
                     newV.y = (rand(vec2(random + 1.0)) * 2.0 - 1.0) * maxV;
                     state.x = rand(vec2(random + 2.2)) * 2.0 - 1.0;
@@ -80,9 +79,13 @@
                     state.w = rand(vec2(random + 5.0));
                 }
 
+                // Movement
                 state.xy += oldV.xy;
+
+                // Gain/loss of energy
                 state.z += state.y * energyGain;
 
+                // Attraction of particles towards each other
                 if (particleGravity != 0.0) {
                     vec4 particle_pos;
                     vec4 center_of_mass;
@@ -117,7 +120,7 @@
                     }
                 }
 
-                /* Limit Position */
+                // Limit position
                 if (state.x < -1.0) {
                     state.x = -1.0;
                     newV.x *= -bounceDampeningFactor;
@@ -135,15 +138,15 @@
                     newV.y *= -bounceDampeningFactor;
                 }
 
-                /* Limit Velocity */
+                // Limit velocity
                 if (length(newV.xy) > maxV) {
                     newV.xy *= vec2(maxV / length(newV.xy));
                 }
 
-                /* Limit Energy */
-                if (state.z < 0.0) { state.z = 0.0; }
+                // Limit energy
                 if (state.z > 1.0) { state.z = 1.0; }
 
+                // Movement towards the mouse pointer
                 if (userInput.b == 1.0) {
                     float dist = distance(state.xy, userInput.xy);
                     if (dist <= pointerRadius) {
@@ -158,6 +161,7 @@
                     }
                 }
 
+                // Movement towards the bottom
                 if (floorGravity != 0.0) {
                     newV.y -= floorGravity;
                 }
