add introductory text in the form of an expedition letter

--- a/index.html
+++ b/index.html
@@ -1,4 +1,41 @@
 <!DOCTYPE html>
+<!--
+    Dear fellow amateur exophysicist,
+
+    I'm excited to see you embarking with me on our expedition towards new
+    frontiers.  It takes courage to leave the comfort of the physics of your
+    home universe and explore the uncharted worlds of exophysics.
+
+    Along with this letter, you will find a complimentary explorer hat, an
+    exochemistry field manual, and a so-called "HTML file", a human-era magic
+    spell that will serve as your entrance portal.
+
+    This file is self-contained, will run as-is on any modern 2020's web
+    browser, and contains the following parts:
+
+    1. The HTML scaffolding
+    2. The "parameters" object, for tweaking basic settings
+    3. The vertex shader code that describes the laws of physics
+    4. The fragment shader code that specifies the color of each particle
+    5. The JavaScript code that takes care of the uninteresting WebGL plumbing
+
+    My personal advice is to start by tweaking the vertex shader, and get an
+    intuition for what it takes to maximize the beautiful emergent properties.
+
+    A few pointers:
+
+    - Website: https://exophysics.net/
+    - Code: https://github.com/exophysics/exophysics
+    - WebGL2 Tutorial: https://webgl2fundamentals.org/
+    - License: http://www.wtfpl.net/
+
+    Finally, I am legally obliged to inform you of the one law of exophysics:
+    YOU ARE REQUIRED TO SHUT DOWN A SIMULATION IMMEDIATELY IF YOU FIND EVIDENCE
+    OF THE EMERGENCE OF SENTIENT CREATURES CAPABLE OF SUFFERING.
+
+    Your guide,
+    Q.
+-->
 <html lang="en">
     <head>
         <title>Exophysics</title>
