--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
             out vec4 newV; // internal attributes: (x-velocity, y-velocity, undefined, undefined)
             out lowp vec4 color;
 
-            float rand(vec2 co){
+            float rand(vec2 co) {
                 // https://stackoverflow.com/a/28095165
-                return fract(sin(dot(co.xy ,vec2(12.9898,78.233))) * 43758.5453);
+                return fract(sin(dot(co.xy, vec2(12.9898, 78.233))) * 43758.5453);
             }
 
             void main() {
