--- a/index.html
+++ b/index.html
@@ -58,16 +58,16 @@
             const int particleLimit = min(gl_MaxVertexUniformVectors - extraUniforms, 1024);
 
             // tweakable parameters
-            const float floorGravity = 0.0015;
-            const float particleGravity = 5000.0;
-            const float flavorAttraction = -0.100;
-            const float numFlavors = 3.0;
-            const float bounceDampeningFactor = 10.0;
-            const float maxV = 0.003;
+            const float floorGravity = 0.0;
+            const float particleGravity = 0.03;
+            const float flavorAttraction = -0.0001;
+            const float numFlavors = 2.0;
+            const float bounceDampeningFactor = 0.99;
+            const float maxV = 0.019;
             const float pointerRadius = 0.30;
-            const float pointerSlowFactor = 0.3;
-            const float pointerPullFactor = 0.5;
-            const float energyGain = 0.000; // it's warmer at the top, and the particles will grow
+            const float pointerSlowFactor = 0.9;
+            const float pointerPullFactor = 0.3;
+            const float energyGain = 0.001; // it's warmer at the top, and the particles will grow
 
             // data transfer variables
             uniform vec4 allStates[particleLimit];
@@ -91,16 +91,13 @@
 
                 gl_Position.xy = state.xy;
                 gl_Position.zw = vec2(0.0, 1.0);
-                //gl_PointSize = state.z * 4.0 + 2.0;
-                gl_PointSize = 3.0;
+                gl_PointSize = state.z * 3.0 + 1.0;
 
-                color.b = min(1.0, max(0.0, state.w));
-                color.r = min(1.0, max(0.0, 1.0-state.w));
-                color.g = 1.0 - (color.r + color.b) / 2.0;
-                //float alpha = 1.0 - state.z * 0.0; // color.a doesn't seem to work
-                //color.r = (flavor == 1 ? 1.0 : 0.0);
-                //color.g = (flavor == 1 ? 0.3 : 0.7);
-                //color.b = (flavor == 1 ? 0.0 : 1.0);
+                float flavor = floor(state.w * numFlavors);
+
+                color.r = (flavor == 1.0 ? 1.0 : 0.0);
+                color.g = (flavor == 1.0 ? 0.3 : 0.7);
+                color.b = (flavor == 1.0 ? 0.0 : 1.0);
                 color.a = 1.0;
 
                 // Has the user paused the simulation?
@@ -139,17 +136,24 @@
 
                 if (flavorAttraction != 0.0) {
                     vec4 otherState;
+                    float otherFlavor;
                     vec2 dist;
                     for (int i = 0; i < particleLimit; i++) {
                         if (i == currentIndex) { continue; }
                         otherState = allStates[i];
+                        otherFlavor = floor(otherState.w * numFlavors);
                         dist = otherState.xy - state.xy;
+                        newV.xy += dist.xy
+                            / pow(length(dist.xy), 4.0)
+                            * flavorAttraction
+                            * (flavor == otherFlavor ? 1.0 : -1.0);
+
                         //if (length(dist.xy) < 0.2) {
-                            newV.xy += dist.xy
-                                * flavorAttraction
-                                / min(0.5, pow(length(dist.xy), 3.0))
-                                //* (0.3 - max(0.0, min(0.3, length(dist.xy))))
-                                * (abs(state.w - otherState.w) < 0.04 ? -1.0 : (numFlavors - 1.0));
+                            //newV.xy += dist.xy
+                            //    * flavorAttraction
+                            //    / min(0.5, pow(length(dist.xy), 3.0))
+                            //    //* (0.3 - max(0.0, min(0.3, length(dist.xy))))
+                            //    * (abs(state.w - otherState.w) < 0.04 ? -1.0 : (numFlavors - 1.0));
                             //if (length(dist.xy) < 0.01) {
                                 //state.w = (9.0 * state.w + otherState.w) / 10.0;
                             //}
