--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
 
             // tweakable parameters
             const float floorGravity = 0.0;
-            const float particleGravity = 0.03;
-            const float flavorAttraction = -0.0001;
-            const float numFlavors = 2.0;
+            const float particleGravity = 0.0;
+            const float flavorAttraction = -0.00005;
+            const float numFlavors = 3.0;
             const float bounceDampeningFactor = 0.99;
             const float maxV = 0.019;
             const float pointerRadius = 0.30;
@@ -95,10 +95,13 @@
 
                 float flavor = floor(state.w * numFlavors);
 
-                color.r = (flavor == 1.0 ? 1.0 : 0.0);
-                color.g = (flavor == 1.0 ? 0.3 : 0.7);
-                color.b = (flavor == 1.0 ? 0.0 : 1.0);
                 color.a = 1.0;
+                if      (flavor == 0.0) { color.rgb = vec3(1.0, 0.3, 0.0); }
+                else if (flavor == 1.0) { color.rgb = vec3(0.0, 0.7, 1.0); }
+                else if (flavor == 2.0) { color.rgb = vec3(1.0, 1.0, 0.0); }
+                else if (flavor == 3.0) { color.rgb = vec3(1.0, 0.0, 1.0); }
+                else if (flavor == 4.0) { color.rgb = vec3(0.0, 1.0, 1.0); }
+                else                    { color.rgb = vec3(1.0, 1.0, 1.0); }
 
                 // Has the user paused the simulation?
                 if (userInput.w == 1.0) { return; }
@@ -135,6 +138,7 @@
                 }
 
                 if (flavorAttraction != 0.0) {
+                    float repulsion = pow(numFlavors - 1.0, 0.3);
                     vec4 otherState;
                     float otherFlavor;
                     vec2 dist;
@@ -144,9 +148,9 @@
                         otherFlavor = floor(otherState.w * numFlavors);
                         dist = otherState.xy - state.xy;
                         newV.xy += dist.xy
-                            / pow(length(dist.xy), 4.0)
+                            / pow(length(dist.xy), 3.0)
                             * flavorAttraction
-                            * (flavor == otherFlavor ? 1.0 : -1.0);
+                            * (flavor == otherFlavor ? repulsion : -1.0);
 
                         //if (length(dist.xy) < 0.2) {
                             //newV.xy += dist.xy
