unstable, colorful vortex (pretty with any particle count)

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             // tweakable parameters
             const float floorGravity = 0.0;
             const float particleGravity = 0.0;
-            const float flavorAttraction = -0.000001;
+            const float flavorAttraction = -0.0000035;
             const float numFlavors = 5.0;
             const float bounceDampeningFactor = 0.99;
             const float maxV = 0.019;
