--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             const float maxV = 0.005;
             const float pointerRadius = 0.30;
             const float pointerSlowFactor = 0.0;
-            const float pointerPullFactor = 10.0;
+            const float pointerPullFactor = 100.0;
             const float energyGain = 0.001; // it's warmer at the top, and the particles will grow
             const float attractionAngle = 10.0 / 360.0 * PI;
             const mat2 attractionRotationMatrix = mat2(
@@ -115,14 +115,17 @@
                 if (state.z < 0.001) {
                     newV.x = (rand(vec2(random)) * 2.0 - 1.0) * maxV;
                     newV.y = (rand(vec2(random + 1.0)) * 2.0 - 1.0) * maxV;
-                    state.x = rand(vec2(random + 2.2)) * 2.0 - 1.0;
-                    state.y = rand(vec2(random + 3.0)) * 2.0 - 1.0;
-                    state.z = rand(vec2(random + 4.0)) * 0.5 + 0.5;
-                    state.w = rand(vec2(random + 5.0));
+                    newV.p = (rand(vec2(random + 2.0)) * 2.0 - 1.0) * maxV;
+                    newV.q = (rand(vec2(random + 3.0)) * 2.0 - 1.0) * maxV;
+                    state.x = rand(vec2(random + 4.0)) * 2.0 - 1.0;
+                    state.y = rand(vec2(random + 5.0)) * 2.0 - 1.0;
+                    state.z = rand(vec2(random + 6.0)) * 0.5 + 0.5;
+                    state.w = rand(vec2(random + 7.0));
                 }
 
                 // Movement
                 state.xy += oldV.xy;
+                state.xy += oldV.pq;
 
                 // Gain/loss of energy
                 state.z += state.y * energyGain;
@@ -164,13 +167,16 @@
                 if (userInput.b == 1.0) {
                     float dist = distance(state.xy, userInput.xy);
                     if (dist <= pointerRadius) {
+                        vec2 accel;
                         dist /= pointerRadius;
                         if (pointerSlowFactor != 0.0) {
                             newV.x *= 1.0 - pointerSlowFactor * (1.0 - dist);
                             newV.y *= 1.0 - pointerSlowFactor * (1.0 - dist);
                         }
                         if (pointerPullFactor != 0.0) {
-                            newV.xy -= (state.xy - userInput.xy) * dist * pointerPullFactor;
+                            accel = (userInput.xy - state.xy) * dist * pointerPullFactor;
+                            newV.xy += accel;
+                            newV.pq += accel;
                         }
                     }
                 }
@@ -184,23 +190,30 @@
                 if (state.x < -1.0) {
                     state.x = -1.0;
                     newV.x *= -bounceDampeningFactor;
+                    newV.p *= -bounceDampeningFactor;
                 }
                 else if (state.x > 1.0) {
                     state.x = 1.0;
                     newV.x *= -bounceDampeningFactor;
+                    newV.p *= -bounceDampeningFactor;
                 }
                 if (state.y < -1.0) {
                     state.y = -1.0;
                     newV.y *= -bounceDampeningFactor;
+                    newV.q *= -bounceDampeningFactor;
                 }
                 else if (state.y > 1.0) {
                     state.y = 1.0;
                     newV.y *= -bounceDampeningFactor;
+                    newV.q *= -bounceDampeningFactor;
                 }
 
                 // Limit velocity
                 if (length(newV.xy) > maxV) {
                     newV.xy *= vec2(maxV / length(newV.xy));
+                }
+                if (length(newV.pq) > maxV) {
+                    newV.pq *= vec2(maxV / length(newV.pq));
                 }
 
                 // Limit energy
